--- a/itopener-parent/itopener-tellist-parent/itopener-tellist-view/src/main/resources/static/views/tellistindex.html
+++ b/itopener-parent/itopener-tellist-parent/itopener-tellist-view/src/main/resources/static/views/tellistindex.html
@@ -12,6 +12,7 @@
 	<link rel="stylesheet" href="../res/css/amazeui.min.css" />
 	<link rel="stylesheet" href="../res/datetimepicker/css/amazeui.datetimepicker.css" />
 	<link rel="stylesheet" href="../res/tree/amazeui.tree.min.css" />
+<!-- 	<link rel="stylesheet" href="../res/ztree/css/zTreeStyle/zTreeStyle.css" /> -->
 	<link rel="stylesheet" href="../res/css/admin.css" />
 </head>
 <body class="am-text-sm">
@@ -73,6 +74,7 @@
 <script src="../res/datetimepicker/js/locales/amazeui.datetimepicker.zh-CN.js"></script>
 <script src="../res/layer/layer.js"></script>
 <script src="../res/tree/amazeui.tree.min.js"></script>
+<!-- <script src="../res/ztree/jquery.ztree.all.js"></script> -->
 <script src="../res/js/app.js"></script>
 <script>
 	(function(){
